--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -43,11 +43,11 @@
 
     <div class="total clearfix">
       <span class="pull-right">
-         <span> 总计 xxx RMB  </span>
+        <span>
+           总计 <%= render_cart_total_price(current_cart) %> RMB
       </span>
-    </div>
-
-    <hr>
+    </span>
+  </div>
 
     <div class="checkout clearfix">
       <%= link_to("确认结账", "#", method: :post, class: "btn btn-lg btn-danger pull-right") %>
